--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               ><img
                 src="/assets/profilepic.jpg"
                 alt=""
-                style="margin-right: 1px"
+                style="margin-right: 1px; border-radius: 50%"
             /></a>
           </li>
           <li
